# hydroagent

./: .gitignore  README.md  requirements.txt  setup.bat  trapezoidal_channel_design.json
backend/: pyproject.toml
backend/hydro_agent/api/: main.py
backend/hydro_agent/core/curb_inlets/: __init__.py  on_grade.py  schemas.py
backend/hydro_agent/core/manning/: channels.py  schemas.py
backend/hydro_agent/export/: formatters.py
backend/hydro_agent/projects/: models.py
backend/tests/: test_core.py  test_curb_inlet_on_grade.py  test_irregular.py  test_solve_discharge.py
skills/manning-channels/: SKILL.md
src/: index.html  package-lock.json  package.json  vite.config.js
src/app/: App.jsx  ChannelCalculator.jsx  CommandPalette.jsx  CurbInletOnGrade.jsx
